tests/miniJava/pos/000838_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( ! 0 ) System.out.println ( { } ) ; else java [ 0 ] = 0 ; } }
