tests/miniJava/neg/004903_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , java int [] ) { return 0 ; } }
